cupt (2.10.0~) UNRELEASED; urgency=low

  *

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 28 Sep 2016 13:10:13 +0200

cupt (2.9.6) unstable; urgency=medium

  * cmakelists:
    - Detect a GCC6 lambda capture optimisation bug (#838438), and lower the
      optimization level if found. This avoids miscompilation on armel/armhf.
      (Closes: #836588)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 23 Sep 2016 10:48:07 +0200

cupt (2.9.5) unstable; urgency=medium

  * test:
    - TestCupt:
      - Make sure APT_CONFIG environment variable is not pre-set. Fixes FTBFS
        if the building tool or environment uses APT_CONFIG for own purposes
        (like newer sbuild). Patch by Adam Conrad, thanks! (Closes: #819605).
  * debian
    - control:
      - Bumped Standards-Version to 3.9.8, no changes needed.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 19 Jun 2016 16:39:02 +0200

cupt (2.9.4) unstable; urgency=medium

  * debian/rules:
    - Fixed calling CMake's install before trying to copy translation files to
      a target package (Closes: #806010).

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 14 Feb 2016 13:36:37 +0100

cupt (2.9.3) unstable; urgency=medium

  * lib:
    - cache/package:
      - Disallow more than 1 installed version per package. This fixes data
        inconsistencies which may lead to crashes. (Closes: #794430)
    - system/state:
      - Parsing dpkg status file: error out on empty package names.
      - Parsing dpkg status file: require 'Package' tag first for every
        record.
      - Parsing dpkg status file: require 'Status' tag for every versioned
        record.
      - Parsing dpkg status file: do not stop reading when met with a newline
        instead of a first tag.
  * debian:
    - control:
      - Bumped the ABI suffix from 0 to 1 for the GCC5 C++11 ABI transition.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 25 Aug 2015 21:13:01 +0300

cupt (2.9.2) unstable; urgency=medium

  * cmakelists: