@@ -1,6 +1,8 @@
 cupt (2.10.0~) UNRELEASED; urgency=low
 
-  *
+  * lib:
+    - config:
+      - New option 'cupt::console::warnings::removal-of-essential'.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 28 Sep 2016 13:10:13 +0200
 
